--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -71,9 +71,11 @@ jobs:
           server_address: smtp.gmail.com
           server_port: 465
           secure: true
+          username: ${{ secrets.MAIL_USERNAME }}
+          password: ${{ secrets.MAIL_PASSWORD }}
           subject: 'Vanakam da Mapla build successfull'
           to: vadivel.gokul@in.bosch.com
-          from: 'ChromaCascade Build <noreply@github.com>'
+          from: ChromaCascade Build System
           body: |
             Vanakam da Mapla build successfull! 🎮
             
@@ -97,5 +99,3 @@ jobs:
             View the workflow run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
             
             Happy Gaming! 🎮✨
-          ignore_cert: true
-          convert_markdown: true
